--- a/Foodgram/app/src/main/res/layout/activity_main.xml
+++ b/Foodgram/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_1"
+        android:id="@+id/btn_login"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_below="@+id/txt_2"
@@ -92,7 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/button_1"
+        android:layout_below="@id/btn_login"
         android:gravity="center"
         android:layout_marginTop="20dp" >
         <TextView
