--- a/Foodgram/app/src/main/res/values-v31/themes.xml
+++ b/Foodgram/app/src/main/res/values-v31/themes.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Foodgram" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
+    <style name="Theme.Foodgram" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. btn login/register and status bar color-->
+        <item name="colorPrimary">@color/purple_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/blue</item>
+        <!-- icon-->
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:windowSplashScreenBackground">@color/pastel</item>
-
         <!-- Customize your theme here. -->
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="android:statusBarColor" tools:targetAPI="l" >@color/white</item>
 
     </style>
 </resources>
