--- a/Foodgram/app/src/main/res/layout/activity_login.xml
+++ b/Foodgram/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/img_1"
@@ -38,22 +38,23 @@
 
         <com.google.android.material.textfield.TextInputLayout
             style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:id="@+id/username"
+            android:id="@+id/emaillaylog"
             android:layout_width="340dp"
             android:layout_height="65dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             app:startIconDrawable="@drawable/person" >
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/emaillog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"
+                android:hint="Email"
                 android:fontFamily="@font/poppins" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:id="@+id/password"
+            android:id="@+id/passwordlaylog"
             android:layout_width="340dp"
             android:layout_height="65dp"
             android:layout_marginStart="32dp"
@@ -63,6 +64,7 @@
             app:startIconDrawable="@drawable/lock" >
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordlog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
@@ -75,16 +77,16 @@
     <Button
         android:id="@+id/btn_login"
         android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_below="@+id/txt_2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:alpha="0.6"
         android:background="@drawable/button_round"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/poppinsbold"
         android:paddingTop="1dp"
-        android:text="Masuk"
-        android:textAlignment="center"
+        android:text="Login"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
@@ -98,18 +100,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Belum Punya Akun?"
+            android:text="Belum punya akun?"
             android:textColor="@color/black"
             android:fontFamily="@font/poppins"
             android:textSize="12sp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" Buat Akun"
+            android:paddingLeft="5dp"
+            android:text="Buat akun"
             android:fontFamily="@font/poppins"
             android:textSize="12sp"
             android:textColor="@color/blue"
-            android:id="@+id/text3"/>
+            android:id="@+id/text_register"/>
 
     </LinearLayout>
 
