--- a/Foodgram/app/src/main/res/values-v31/themes.xml
+++ b/Foodgram/app/src/main/res/values-v31/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Foodgram" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Foodgram" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. btn login/register and status bar color-->
         <item name="colorPrimary">@color/purple_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
