Search Account, bug fixed, modified register

--- a/Foodgram/app/src/main/res/layout/activity_register.xml
+++ b/Foodgram/app/src/main/res/layout/activity_register.xml
@@ -38,6 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins"
+                android:inputType="textCapWords"
                 android:hint="Nama" />
         </com.google.android.material.textfield.TextInputLayout>
 
