--- a/Foodgram/app/src/main/res/layout/fragment_explore.xml
+++ b/Foodgram/app/src/main/res/layout/fragment_explore.xml
@@ -16,10 +16,12 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/btn_round_dark">
+
+
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -33,10 +35,11 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@android:color/transparent"
-                android:textColorHint="@color/grey"
+                android:hint="Cari"
                 android:padding="10dp"
                 android:textColor="@color/pastel"
-                android:hint="Cari" />
+                android:textColorHint="@color/grey" />
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -44,5 +47,20 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/bar" />
+        android:layout_below="@+id/bar"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:id="@+id/explore"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/bar" >
+        <Button
+            android:id="@+id/test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bar" />
+
+    </LinearLayout>
+
 </RelativeLayout>
