--- a/Foodgram/app/src/main/res/layout/fragment_like.xml
+++ b/Foodgram/app/src/main/res/layout/fragment_like.xml
@@ -5,12 +5,32 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.HomeFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Like Fragment"
-        android:textSize="25dp"
-        android:layout_centerInParent="true"/>
+        android:background="@color/darkgreen">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/darkgreen">
 
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Activity"
+                    android:fontFamily="@font/poppinsbold"
+                    android:textColor="@color/darkgreen"/>
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recycler_view">
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
