--- a/Foodgram/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Foodgram/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/home"
-        android:icon="@drawable/ic_home"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_home"
+        android:title="" />
+
     <item android:id="@+id/explore"
-        android:icon="@drawable/ic_explore"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_explore"
+        android:title=""/>
+
     <item android:id="@+id/post"
-        android:icon="@drawable/ic_post"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_post"
+        android:title=""/>
+
     <item android:id="@+id/like"
-        android:icon="@drawable/ic_like"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_like"
+        android:title=""/>
+
     <item android:id="@+id/profile"
-        android:icon="@drawable/ic_profile"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_profile"
+        android:title=""/>
 </menu>
