Revert "Squashed commit of the following:"
This reverts commit ee7b7baf9fb53c58d828c2571dc6b6cba9bb2999.

--- a/Foodgram/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Foodgram/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,27 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/home"
-        android:enabled="true"
-        android:icon="@drawable/ic_home"
-        android:title="" />
-
+        android:icon="@drawable/ic_home"/>
     <item android:id="@+id/explore"
-        android:enabled="true"
-        android:icon="@drawable/ic_explore"
-        android:title=""/>
-
+        android:icon="@drawable/ic_explore"/>
     <item android:id="@+id/post"
-        android:enabled="true"
-        android:icon="@drawable/ic_post"
-        android:title=""/>
-
+        android:icon="@drawable/ic_post"/>
     <item android:id="@+id/like"
-        android:enabled="true"
-        android:icon="@drawable/ic_like"
-        android:title=""/>
-
+        android:icon="@drawable/ic_like"/>
     <item android:id="@+id/profile"
-        android:enabled="true"
-        android:icon="@drawable/ic_profile"
-        android:title=""/>
+        android:icon="@drawable/ic_profile"/>
 </menu>
