--- a/Foodgram/app/src/main/res/layout/post_item.xml
+++ b/Foodgram/app/src/main/res/layout/post_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,20 +65,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/like"
-            android:layout_marginStart="15dp"
             android:text="likecount"
-            android:textColor="@color/black"
-            android:fontFamily="@font/poppins"
-            android:textStyle="bold"/>
+            android:visibility="gone"
+            android:layout_marginStart="15dp"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/publisherpost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="publisher"
             android:layout_below="@+id/like"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:text="publisher"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
@@ -87,31 +86,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/like"
+            android:text="judul"
+            android:visibility="gone"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:text="judul"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/black"
-            android:visibility="gone" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/descriptionpost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/like"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
             android:text="likes"
-            android:textColor="@color/black"
-            android:visibility="gone" />
-
+            android:visibility="gone"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/black" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/poppins"
             android:text="Lihat resep" />
 
 
@@ -122,7 +118,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
-            android:fontFamily="@font/poppins"
             android:text="Lihat semua comment" />
     </LinearLayout>
 
