--- a/Foodgram/app/src/main/res/layout/fragment_post_detail.xml
+++ b/Foodgram/app/src/main/res/layout/fragment_post_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.HomeFragment">
+    tools:context=".Fragment.PostDetailFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/bar"
@@ -22,16 +22,20 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Activity"
+                    android:text="Photo"
                     android:fontFamily="@font/poppinsbold"
                     android:textColor="@color/darkgreen"/>
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/bar"
         android:id="@+id/recycler_view"
-        android:layout_below="@+id/bar">
+        >
+
     </androidx.recyclerview.widget.RecyclerView>
+
 </RelativeLayout>
