--- a/Foodgram/app/src/main/res/layout/notification_item.xml
+++ b/Foodgram/app/src/main/res/layout/notification_item.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_profile"
         android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/img_profile"/>
-    <LinearLayout
+        android:layout_height="50dp" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:orientation="vertical"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="2dp"
+        android:layout_toStartOf="@id/post_img"
         android:layout_toEndOf="@id/img_profile"
-        android:layout_toStartOf="@id/post_img">
+        android:layout_centerVertical="true">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/username"
-            android:textStyle="bold"
-            android:textColor="@color/darkgreen"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/darkgreen"
+            android:textStyle="bold"
+            android:fontFamily="@font/poppins"/>
+
+        <TextView
             android:id="@+id/comment"
-            android:maxLines="5"/>
-    </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@id/username"
+            android:maxLines="5"
+            android:fontFamily="@font/poppins"/>
+    </RelativeLayout>
+
     <ImageView
+        android:id="@+id/post_img"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/post_img"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
