Fix Bugs, Daymode, toolbar, bottomsheet
Auto Daymode remove darkmode
Bottom sheet for post settings
back button toolbar and title

--- a/Foodgram/app/src/main/res/layout/fragment_explore.xml
+++ b/Foodgram/app/src/main/res/layout/fragment_explore.xml
@@ -55,11 +55,10 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/bar">
 
-        <Button
-            android:id="@+id/test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/bar" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler_viewExplore" />
 
     </LinearLayout>
 
