--- a/Foodgram/app/src/main/res/layout/activity_comments.xml
+++ b/Foodgram/app/src/main/res/layout/activity_comments.xml
@@ -6,20 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".CommentsActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        style="@style/ThemeOverlay.AppCompat.Dialog"
+    <LinearLayout
+        android:id="@+id/bar"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:background="@color/darkgreen"
-        app:titleTextColor="@color/white" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/backimage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/backicon_white"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"/>
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/darkgreen"
+            app:titleTextColor="@color/white">
+
+        </androidx.appcompat.widget.Toolbar>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/bar"
         android:background="#f7f7f7" />
 
     <RelativeLayout
