--- a/Foodgram/app/src/main/res/layout/fragment_home.xml
+++ b/Foodgram/app/src/main/res/layout/fragment_home.xml
@@ -26,12 +26,12 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="15dp"
                     android:fontFamily="@font/poppins"
                     android:text="Foodgram."
-                    android:textStyle="bold"
-                    android:layout_marginTop="15dp"
                     android:textColor="@color/white"
-                    android:textSize="30sp" />
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
