--- a/Foodgram/app/src/main/res/layout/post_item.xml
+++ b/Foodgram/app/src/main/res/layout/post_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bottomline">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image_profile"
@@ -24,13 +24,23 @@
                 android:id="@+id/usernamepost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/image_profile"
                 android:fontFamily="@font/poppins"
                 android:text="username"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/postsetting"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
+                android:src="@drawable/verticalthreedots" />
+
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/post"
@@ -66,10 +76,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/like"
             android:layout_marginStart="15dp"
+            android:fontFamily="@font/poppins"
             android:text="likecount"
             android:textColor="@color/black"
-            android:fontFamily="@font/poppins"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/publisherpost"
@@ -89,8 +99,8 @@
             android:layout_below="@+id/like"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:text="judul"
             android:fontFamily="@font/poppins"
+            android:text="judul"
             android:textColor="@color/black"
             android:visibility="gone" />
 
