--- a/Foodgram/app/src/main/res/values-v31/themes.xml
+++ b/Foodgram/app/src/main/res/values-v31/themes.xml
@@ -6,16 +6,24 @@
         <item name="colorPrimary">@color/purple_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <!-- icon-->
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/pastel</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:windowSplashScreenBackground">@color/pastel</item>
         <!-- Customize your theme here. -->
+        <item name="android:forceDarkAllowed" tools:targetAPI="q">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:statusBarColor" tools:targetAPI="l" >@color/white</item>
+    </style>
 
+    <style name="BottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetDialogTheme</item>
+    </style>
+
+    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
